# hw3-yauchristy

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools/tests/: test_utils.py
ligotools/tests/.ipynb_checkpoints/: test_readligo-checkpoint.py
