[build-system]
requires = ["setuptools >= 70", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC) and Christy Yau", email="yau_christy@berkeley.edu" },
]
description = "installable ligotools package for LIGO project"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "python",
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "ipykernel"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["LIGO", "tools"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-yauchristy"
Issues = "https://github.com/UCB-stat-159-f25/hw3-yauchristy/issues"

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}